--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<repositories>
 		<repository>
-			<id>central</id>
-			<url>http://isotope-studio.fr:8081/artifactory/libs-release</url>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/BDoryan/IsotopeStudioRepository</url>
 		</repository>
 	</repositories>
 
@@ -82,7 +83,7 @@
 		<dependency>
 			<groupId>doryanbessiere.isotopestudio.api</groupId>
 			<artifactId>isotopestudioapi</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
